# Mathematics-Interpreter

./: .gitignore  CMakeLists.txt  main  main.cpp
Debug/: Debug.cpp
Input/: Input.cpp  Input.h
Lexer/: Lexer.cpp  Lexer.h
Lexer/Token/: Token.cpp
Operation/: Operation.cpp  Operation.h  Opertaion.h
Parser/: Parser.cpp
Token/: Token.cpp  Token.h
src/Lexer/: Lexer.cpp
src/Parser/: Parser.h
src/Token/: Token.cpp  Token.h
